# oop-python

./: .gitignore  cool_project.py  messenger.db  messenger2.db  pure_sql.py  pydantic_sqalchemy.py  pyproject.toml  some_new.py  test.py  test_cool_project.py  test_cool_project_pytest.py
pydantic_sqlalchemy/: __init__.py  database.py  models.py  schemas.py  services.py
